--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <title>First Site</title>
 </head>
 <body>
-    <div>
-        <p>
-            fyuogbhaiszjudfnuilsegnmk
-        </p>
-    </div>
+    <h1>
+        заголовок1
+    </h1>
+    <h2>
+        заголовок1
+    </h2>
+    <h3>
+        заголовок1
+    </h3>
+    <h4>
+        заголовок1
+    </h4>
+    <h5>
+        заголовок1
+    </h5>
+    <h6>
+        заголовок1
+    </h6>
+    <p>
+        мышь кродеться
+    </p>
 </body>
 </html>
