--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
+    <h1>n 
         заголовок1
     </h1>
     <h2>
@@ -26,7 +26,7 @@
         заголовок1
     </h6>
     <p>
-        мышь кродеться
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque dolores laboriosam vero culpa, repudiandae optio ducimus magnam, explicabo odit tempore temporibus impedit quod dolore. Aspernatur sed aut reiciendis minima obcaecati!
     </p>
 </body>
 </html>
